GMS-512: updates return type for get mint by id
